2009-02-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Allow
	  forced completion for fields/properties in expressions.

	* MonoDevelop.AspNet.StateEngine/AspNetFreeState.cs: Add
	  rollback so that expressions can be differentiated. Fixes
	  field/property completion in expressions.

2009-02-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Parser/SuggestedHandlerCompletionData.cs:
	  Track BindingService API. Fixes event completion bugs.

2009-02-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/WebTypeManager.cs:
	* MonoDevelop.AspNet/ProjectRegisteredControls.cs:
	* MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs:
	  Implement full type lookup and listing mechanisms for
	  controls registered in web.config. Enables full code
	  completion for these controls. Fixes "Bug 470488 - Controls
	  registered in web.config do not have code completion".

2009-02-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetAppProject.cs: Add a
	  ControlRegistrationCache to the project to cache web.config
	  control registrations.

	* MonoDevelop.AspNet/ProjectRegisteredControls.cs: Use a
	  custom class for encapsulating registration info instead of
	  TagPrefixInfo, so we can attach extra data.

	* MonoDevelop.AspNet/WebTypeManager.cs: Use project's
	  ControlRegistrationCache for type lookups.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.AspNet.addin.xml: Bump MD version.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.AspNet.Gui.XspOptionsPanelWidget.cs:
	* gtk-gui/MonoDevelop.AspNet.Deployment.WebTargetEditor.cs:
	* gtk-gui/MonoDevelop.AspNet.Deployment.WebDeployTargetEditor.cs:
	* gtk-gui/MonoDevelop.AspNet.Deployment.WebDeployLaunchDialog.cs:
	* gtk-gui/MonoDevelop.AspNet.Gui.AspNetConfigurationPanelWidget.cs:
	*