@@ -1,3 +1,8 @@
+2009-02-04  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Track
+	  BindingService API.
+
 2009-02-03  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Allow
